code changed to oop, background-color to body and styling to header

--- a/style/_rules.scss
+++ b/style/_rules.scss
@@ -6,6 +6,21 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: $mainFont;
+h1, h2, h3, h4, h5, h6{
+    text-transform: uppercase;
+    color: white;
+}
+
+h1{
+    font-size: 6vmin;
+}
+
+p{
+    color: white;
+}
+
+.header-titel-wrapper,
+.header-date-wrapper{
+    height: 100%;
+    @include flexCenter;
 }
