--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,1 +1,7 @@
 $mainFont: 'Poppins', sans-serif;
+
+@mixin flexCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
