--- a/style/style.css
+++ b/style/style.css
@@ -5,12 +5,56 @@
           box-sizing: border-box;
 }
 
-body {
-  font-family: "Poppins", sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  text-transform: uppercase;
+  color: white;
+}
+
+h1 {
+  font-size: 6vmin;
+}
+
+p {
+  color: white;
+}
+
+.header-titel-wrapper,
+.header-date-wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 body {
   width: 100vw;
   height: 100vh;
+  font-family: "Poppins", sans-serif;
+  background: #0f4e96;
+}
+
+body header {
+  height: 20vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body header .header-titel-wrapper {
+  width: 80%;
+}
+
+body header .header-date-wrapper {
+  width: 20%;
+}
+
+body header .header-date-wrapper .date-tag {
+  font-size: 3vmin;
 }
 /*# sourceMappingURL=style.css.map */
