--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ h1 {
 
 p {
   color: white;
+  font-size: 3vmin;
 }
 
 .header-titel-wrapper,
@@ -52,9 +53,9 @@ body header .header-titel-wrapper {
 
 body header .header-date-wrapper {
   width: 20%;
-}
-
-body header .header-date-wrapper .date-tag {
-  font-size: 3vmin;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
