--- a/style/style.scss
+++ b/style/style.scss
@@ -20,4 +20,42 @@ body{
             flex-direction: column;
         }
     }
+
+    main{
+        height: 80vh;
+        width: 100%;
+        display: flex;
+
+        .btn-container{
+            width: 50%;
+            height: 100%;
+            @include flexCenter;
+
+            button{
+                width: 50%;
+                height: 10%;
+                font-family: $mainFont;
+                font-size: 2.5vmin;
+            }
+        }
+
+        .text-container{
+            width: 50%;
+            height: 100%;
+            
+            .author-wrapper,
+            .quote-wrapper{
+                width: 100%;
+                height: 50%;
+                @include flexCenter;
+                flex-direction: column;
+
+                .author,
+                .quote-titel{
+                    font-size: 4vmin;
+                    padding-bottom: 1rem;
+                }
+            }
+        }
+    }
 }
