--- a/style/style.scss
+++ b/style/style.scss
@@ -49,6 +49,7 @@ body{
                 height: 50%;
                 @include flexCenter;
                 flex-direction: column;
+                text-align: center;
 
                 .author,
                 .quote-titel{
